# emio

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  index.html
.github/workflows/: ci.yml  pages.yml
cmake/: arm-none-eabi-toolchain.cmake  coverage.cmake  dev-mode.cmake  elf_to_size_coverage.py  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  size-coverage.cmake  variables.cmake
docs/: API.md  CONTRIBUTING.md  DESIGN.md  DEVELOPING.md
docs/res/: class_diagram.puml
include/emio/: buffer.hpp  emio.hpp  format.hpp  format_string.hpp  formatter.hpp  iterator.hpp  ranges.hpp  reader.hpp  result.hpp  scan.hpp  scanner.hpp  std.hpp  writer.hpp
include/emio/detail/: args.hpp  basic_string.hpp  bignum.hpp  bitset.hpp  conversion.hpp  ct_vector.hpp  misc.hpp  parser.hpp  predef.hpp  string_validation.hpp  utf.hpp  validated_string.hpp  validated_string_storage.hpp
include/emio/detail/format/: args.hpp  decode.hpp  dragon.hpp  format_string.hpp  format_to.hpp  formatter.hpp  parser.hpp  ranges.hpp  specs.hpp
include/emio/detail/scan/: args.hpp  parser.hpp  scan_from.hpp  scan_string.hpp  scanner.hpp  specs.hpp
test/benchmark/: CMakeLists.txt  bench_format.cpp  bench_scan.cpp  benchmark.cpp
test/compile_test/: CMakeLists.txt  compile.cpp
test/fuzzing/dragon4/: CMakeLists.txt  Makefile
test/fuzzing/dragon4/rust_ref/: Cargo.toml
test/fuzzing/format/: Makefile  main.cpp
test/fuzzing/format/seeds/: test4  test5  test6
test/fuzzy/: .gitignore  Makefile  main.cpp
test/fuzzy/dragon4/: Makefile  main.cpp
test/fuzzy/dragon4/rust_ref/src/: lib.rs
test/fuzzy/dragon4/seeds/: test1
test/fuzzy/format/: CMakeLists.txt  main.cpp
test/fuzzy/format/seeds/: test3  test7
test/fuzzy/validate_and_parse/: Makefile
test/link_test/: CMakeLists.txt  compile.cpp
test/size_test/: CMakeLists.txt  stubs.cpp
test/size_test/emio/: doFormat_a.cpp  dragon4.cpp  format.cpp  format_all.cpp  format_all_and_extra.cpp  format_and_scan_all.cpp  format_and_scan_all_runtime.cpp  format_and_write_int.cpp  format_double.cpp  format_int.cpp  format_runtime.cpp  format_to.cpp  format_to_n.cpp  format_twice.cpp  scan_all.cpp  scan_int.cpp  vformat.cpp  write_int.cpp
test/size_test/floff/: floff.cpp  floff.h  floff_small.cpp
test/size_test/fmt/: doFormat_a.cpp  fmt_dragon.cpp  fmt_grisu.cpp  fmt_grisu_and_dragon.cpp  format_all.cpp  format_all_and_extra.cpp  format_int.cpp  format_int_twice.cpp  format_runtime.cpp  format_to.cpp  format_to_n.cpp  vformat.cpp
test/size_test/std/: locale.cpp  snprintf.cpp  snprintf_all.cpp  snprintf_and_sscanf.cpp  snprintf_double.cpp  sprintf_all.cpp  sprintf_double.cpp  sscanf.cpp  string.cpp  string_stream.cpp  to_chars.cpp  to_string_double.cpp  to_string_int.cpp
test/static_analysis/: CMakeLists.txt  test_main.cpp
test/unit_test/: CMakeLists.txt  integer_ranges.hpp  test_buffer.cpp  test_dynamic_format_spec.cpp  test_dynamic_format_specs.cpp  test_format.cpp  test_format_api.cpp  test_format_as.cpp  test_format_could_fail_api.cpp  test_format_emio_vs_fmt.cpp  test_format_string.cpp  test_format_to_api.cpp  test_format_to_n_api.cpp  test_formatted_size.cpp  test_formatter.cpp  test_iterator.cpp  test_print.cpp  test_ranges.cpp  test_reader.cpp  test_result.cpp  test_scan.cpp  test_simple.cpp  test_std.cpp  test_writer.cpp
test/unit_test/detail/: test_bignum.cpp  test_bitset.cpp  test_conversion.cpp  test_ct_basic_string.cpp  test_ct_vector.cpp  test_decode.cpp  test_dragon.cpp  test_utf.cpp
